# google-ads-stubs

./: .gitignore  README.md  create_enums.py  create_service_overloads.py  create_type_stubs.py  create_types_pyi.py  fixup_versions.py  gen.sh  pyproject.toml  stubdefaulter.sh  stubgen.py
.github/workflows/: main.yml  publish.yml
.github/workflows/matchers/: isort.json  ruff.json
google-stubs/ads/google_ads/: __init__.pyi  client.pyi  config.pyi  errors.pyi  oauth2.pyi  util.pyi
google-stubs/ads/google_ads/interceptors/: __init__.pyi  exception_interceptor.pyi  interceptor.py  interceptor.pyi  interceptor_mixin.pyi  logging_interceptor.pyi  metadata_interceptor.pyi
google-stubs/ads/google_ads/v1/: __init__.pyi  types.pyi
google-stubs/ads/google_ads/v1/services/: account_budget_proposal_service_client.pyi  account_budget_service_client.pyi  ad_group_ad_label_service_client.pyi  ad_group_ad_service_client.pyi  ad_group_audience_view_service_client.pyi  ad_group_bid_modifier_service_client.pyi  ad_group_criterion_label_service_client.pyi  ad_group_criterion_service_client.pyi  ad_group_criterion_simulation_service_client.pyi  ad_group_extension_setting_service_client.pyi  ad_group_feed_service_client.pyi  ad_group_label_service_client.pyi  ad_group_service_client.pyi  ad_group_simulation_service_client.pyi  ad_parameter_service_client.pyi  ad_schedule_view_service_client.pyi  age_range_view_service_client.pyi  asset_service_client.pyi  bidding_strategy_service_client.pyi  billing_setup_service_client.pyi  campaign_audience_view_service_client.pyi  campaign_bid_modifier_service_client.pyi  campaign_budget_service_client.pyi  campaign_criterion_service_client.pyi  campaign_criterion_simulation_service_client.pyi  campaign_draft_service_client.pyi  campaign_experiment_service_client.pyi  campaign_extension_setting_service_client.pyi  campaign_feed_service_client.pyi  campaign_label_service_client.pyi  (+71 more)
google-stubs/ads/google_ads/v2/: __init__.pyi  types.pyi
google-stubs/ads/google_ads/v3/: __init__.pyi  types.pyi
google-stubs/ads/google_ads/v4/: __init__.pyi  types.pyi
google-stubs/ads/google_ads/v5/: __init__.pyi  types.pyi
google-stubs/ads/google_ads/v6/: __init__.pyi  types.pyi
google-stubs/ads/googleads/: __init__.pyi  client.pyi  config.pyi  errors.pyi  oauth2.pyi  util.pyi
google-stubs/ads/googleads/interceptors/: __init__.pyi  exception_interceptor.pyi  helpers.pyi  interceptor.pyi  logging_interceptor.pyi  metadata_interceptor.pyi
google-stubs/ads/googleads/v10/: __init__.pyi
google-stubs/ads/googleads/v11/: __init__.pyi
google-stubs/ads/googleads/v12/: __init__.pyi
google-stubs/ads/googleads/v13/: __init__.pyi
google-stubs/ads/googleads/v14/: __init__.pyi
google-stubs/ads/googleads/v15/: __init__.pyi
google-stubs/ads/googleads/v16/: __init__.pyi
google-stubs/ads/googleads/v17/: __init__.pyi
google-stubs/ads/googleads/v18/: __init__.pyi
google-stubs/ads/googleads/v19/: __init__.pyi
google-stubs/ads/googleads/v23/: __init__.pyi
google-stubs/ads/googleads/v7/: __init__.pyi
google-stubs/ads/googleads/v8/: __init__.pyi
google-stubs/ads/googleads/v9/: __init__.pyi
(+23387 files in other folders)
