[tool.poetry]
name = "google-ads-stubs"
version = "17.0.0"
license = "Apache-2.0"
description = "Type stubs for google-ads"
authors = ["Henrik Bruåsdal <henrik.bruasdal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/henribru/google-ads-stubs"
packages = [
    { include = "google-stubs" },
]
classifiers = [
    "Typing :: Stubs Only",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
typing-extensions = ">=3.10.0"
googleapis-common-protos-stubs = ">=2.0.0"
google-ads = ">=22.1.0"
grpc-stubs = ">=1.24.7"
types-protobuf = ">=3.18.0"
proto-plus-stubs = ">=0.5.0"
google-auth-stubs = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
mypy = {version = "^1.7.0", python = "^3.8"}
black =  {version = "^23.11.0", python = "^3.8"}
isort = {version = "^5.12.0", python = "^3.8"}
stubdefaulter = "^0.1.0"
ruff = "^0.1.5"

[tool.isort]
profile = "black"
known_first_party = "google.ads.googleads"
combine_as_imports = true
float_to_top = true

[tool.ruff.lint]
select = ["UP"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
