[tool.poetry]
name = "google-ads-stubs"
version = "18.1.0"
license = "Apache-2.0"
description = "Type stubs for google-ads"
authors = ["Henrik Bruåsdal <henrik.bruasdal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/henribru/google-ads-stubs"
packages = [
    { include = "google-stubs" },
]
classifiers = [
    "Typing :: Stubs Only",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
typing-extensions = ">=3.10.0"
googleapis-common-protos-stubs = ">=2.0.0"
google-ads = ">=23.1.0"
grpc-stubs = ">=1.24.7"
types-protobuf = ">=3.18.0"
proto-plus-stubs = ">=0.5.0"
google-auth-stubs = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
stubdefaulter = "^0.1.0"
ruff = "^0.3.3"

[tool.ruff.lint]
select = ["UP", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["google.ads.googleads"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
